crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF200_maturin_gh_1615.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
error[RUF200]: pyproject.toml:9:17: Failed to parse pyproject.toml: wanted string or table

   |
 7 | [project]
 8 | name = "..."
 9 | license-files = [ "license.txt",]
   |                 ^^^^^^^^^^^^^^^^^
10 | requires-python = ">=3.8"
11 | requires-dist = [ "maturin>=0.14", "...",]
   |
