crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF200_various_invalid.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF200 Failed to parse pyproject.toml: URL requirement must be preceded by a package name. Add the name of the package before the URL (e.g., `package_name @ /path/to/file`).
...
^^^
  --> pyproject.toml:10:16
   |
10 | dependencies = [ "packaging", "...",]
   |                ^^^^^^^^^^^^^^^^^^^^^^
   |
