crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF201_pyproject.toml.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF201 [*] Rule code used instead of name in select
 --> pyproject.toml:3:6
  |
1 | [tool.ruff]
2 | select = [
3 |     "F401",
  |      ^^^^
4 |     "unused-import",
5 |     "F",
  |
help: Replace rule code with name
  |
2 | select = [
  -     "F401",
3 |     "unused-import",
4 +     "unused-import",
5 |     "F",
  |

RUF201 [*] Rule code used instead of name in extend-select
 --> pyproject.toml:7:19
  |
5 |     "F",
6 | ]
7 | extend-select = ['F841']
  |                   ^^^^
8 | fixable = ["""E501"""]
9 | extend-fixable = ['''UP035''']
  |
help: Replace rule code with name
  |
6 | ]
  - extend-select = ['F841']
7 + extend-select = ['unused-variable']
8 | fixable = ["""E501"""]
  |

RUF201 [*] Rule code used instead of name in fixable
  --> pyproject.toml:8:15
   |
 6 | ]
 7 | extend-select = ['F841']
 8 | fixable = ["""E501"""]
   |               ^^^^
 9 | extend-fixable = ['''UP035''']
10 | ignore = ["F401"]
   |
help: Replace rule code with name
  |
7 | extend-select = ['F841']
  - fixable = ["""E501"""]
8 + fixable = ["""line-too-long"""]
9 | extend-fixable = ['''UP035''']
  |

RUF201 [*] Rule code used instead of name in extend-fixable
  --> pyproject.toml:9:22
   |
 7 | extend-select = ['F841']
 8 | fixable = ["""E501"""]
 9 | extend-fixable = ['''UP035''']
   |                      ^^^^^
10 | ignore = ["F401"]
11 | extend-ignore = ["F841"]
   |
help: Replace rule code with name
   |
8  | fixable = ["""E501"""]
   - extend-fixable = ['''UP035''']
9  + extend-fixable = ['''deprecated-import''']
10 | ignore = ["F401"]
   |

RUF201 [*] Rule code used instead of name in ignore
  --> pyproject.toml:10:12
   |
 8 | fixable = ["""E501"""]
 9 | extend-fixable = ['''UP035''']
10 | ignore = ["F401"]
   |            ^^^^
11 | extend-ignore = ["F841"]
12 | per-file-ignores = { "foo.py" = ["E501"] }
   |
help: Replace rule code with name
   |
9  | extend-fixable = ['''UP035''']
   - ignore = ["F401"]
10 + ignore = ["unused-import"]
11 | extend-ignore = ["F841"]
   |

RUF201 [*] Rule code used instead of name in extend-ignore
  --> pyproject.toml:11:19
   |
 9 | extend-fixable = ['''UP035''']
10 | ignore = ["F401"]
11 | extend-ignore = ["F841"]
   |                   ^^^^
12 | per-file-ignores = { "foo.py" = ["E501"] }
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |
help: Replace rule code with name
   |
10 | ignore = ["F401"]
   - extend-ignore = ["F841"]
11 + extend-ignore = ["unused-variable"]
12 | per-file-ignores = { "foo.py" = ["E501"] }
   |

RUF201 [*] Rule code used instead of name in per-file-ignores
  --> pyproject.toml:12:35
   |
10 | ignore = ["F401"]
11 | extend-ignore = ["F841"]
12 | per-file-ignores = { "foo.py" = ["E501"] }
   |                                   ^^^^
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
14 | unfixable = ["F401"]
   |
help: Replace rule code with name
   |
11 | extend-ignore = ["F841"]
   - per-file-ignores = { "foo.py" = ["E501"] }
12 + per-file-ignores = { "foo.py" = ["line-too-long"] }
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |

RUF201 [*] Rule code used instead of name in extend-per-file-ignores
  --> pyproject.toml:13:42
   |
11 | extend-ignore = ["F841"]
12 | per-file-ignores = { "foo.py" = ["E501"] }
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |                                          ^^^^^
14 | unfixable = ["F401"]
15 | extend-unfixable = ["F841"]
   |
help: Replace rule code with name
   |
12 | per-file-ignores = { "foo.py" = ["E501"] }
   - extend-per-file-ignores = { "bar.py" = ["UP035"] }
13 + extend-per-file-ignores = { "bar.py" = ["deprecated-import"] }
14 | unfixable = ["F401"]
   |

RUF201 [*] Rule code used instead of name in unfixable
  --> pyproject.toml:14:15
   |
12 | per-file-ignores = { "foo.py" = ["E501"] }
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
14 | unfixable = ["F401"]
   |               ^^^^
15 | extend-unfixable = ["F841"]
16 | extend-safe-fixes = ["E501"]
   |
help: Replace rule code with name
   |
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   - unfixable = ["F401"]
14 + unfixable = ["unused-import"]
15 | extend-unfixable = ["F841"]
   |

RUF201 [*] Rule code used instead of name in extend-unfixable
  --> pyproject.toml:15:22
   |
13 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
14 | unfixable = ["F401"]
15 | extend-unfixable = ["F841"]
   |                      ^^^^
16 | extend-safe-fixes = ["E501"]
17 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
14 | unfixable = ["F401"]
   - extend-unfixable = ["F841"]
15 + extend-unfixable = ["unused-variable"]
16 | extend-safe-fixes = ["E501"]
   |

RUF201 [*] Rule code used instead of name in extend-safe-fixes
  --> pyproject.toml:16:23
   |
14 | unfixable = ["F401"]
15 | extend-unfixable = ["F841"]
16 | extend-safe-fixes = ["E501"]
   |                       ^^^^
17 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
15 | extend-unfixable = ["F841"]
   - extend-safe-fixes = ["E501"]
16 + extend-safe-fixes = ["line-too-long"]
17 | extend-unsafe-fixes = ["UP035"]
   |

RUF201 [*] Rule code used instead of name in extend-unsafe-fixes
  --> pyproject.toml:17:25
   |
15 | extend-unfixable = ["F841"]
16 | extend-safe-fixes = ["E501"]
17 | extend-unsafe-fixes = ["UP035"]
   |                         ^^^^^
18 |
19 | [tool.ruff.lint]
   |
help: Replace rule code with name
   |
16 | extend-safe-fixes = ["E501"]
   - extend-unsafe-fixes = ["UP035"]
17 + extend-unsafe-fixes = ["deprecated-import"]
18 |
   |

RUF201 [*] Rule code used instead of name in lint.select
  --> pyproject.toml:21:6
   |
19 | [tool.ruff.lint]
20 | select = [
21 |     "F401",
   |      ^^^^
22 |     "unused-import",
23 |     "unknown-rule",
   |
help: Replace rule code with name
   |
20 | select = [
   -     "F401",
21 |     "unused-import",
22 +     "unused-import",
23 |     "unknown-rule",
   |

RUF201 [*] Rule code used instead of name in lint.extend-select
  --> pyproject.toml:25:19
   |
23 |     "unknown-rule",
24 | ]
25 | extend-select = ['F841']
   |                   ^^^^
26 | fixable = ["""E501"""]
27 | extend-fixable = ['''UP035''']
   |
help: Replace rule code with name
   |
24 | ]
   - extend-select = ['F841']
25 + extend-select = ['unused-variable']
26 | fixable = ["""E501"""]
   |

RUF201 [*] Rule code used instead of name in lint.fixable
  --> pyproject.toml:26:15
   |
24 | ]
25 | extend-select = ['F841']
26 | fixable = ["""E501"""]
   |               ^^^^
27 | extend-fixable = ['''UP035''']
28 | ignore = ["F401"]
   |
help: Replace rule code with name
   |
25 | extend-select = ['F841']
   - fixable = ["""E501"""]
26 + fixable = ["""line-too-long"""]
27 | extend-fixable = ['''UP035''']
   |

RUF201 [*] Rule code used instead of name in lint.extend-fixable
  --> pyproject.toml:27:22
   |
25 | extend-select = ['F841']
26 | fixable = ["""E501"""]
27 | extend-fixable = ['''UP035''']
   |                      ^^^^^
28 | ignore = ["F401"]
29 | extend-ignore = ["F841"]
   |
help: Replace rule code with name
   |
26 | fixable = ["""E501"""]
   - extend-fixable = ['''UP035''']
27 + extend-fixable = ['''deprecated-import''']
28 | ignore = ["F401"]
   |

RUF201 [*] Rule code used instead of name in lint.ignore
  --> pyproject.toml:28:12
   |
26 | fixable = ["""E501"""]
27 | extend-fixable = ['''UP035''']
28 | ignore = ["F401"]
   |            ^^^^
29 | extend-ignore = ["F841"]
30 | per-file-ignores = { "foo.py" = ["E501"] }
   |
help: Replace rule code with name
   |
27 | extend-fixable = ['''UP035''']
   - ignore = ["F401"]
28 + ignore = ["unused-import"]
29 | extend-ignore = ["F841"]
   |

RUF201 [*] Rule code used instead of name in lint.extend-ignore
  --> pyproject.toml:29:19
   |
27 | extend-fixable = ['''UP035''']
28 | ignore = ["F401"]
29 | extend-ignore = ["F841"]
   |                   ^^^^
30 | per-file-ignores = { "foo.py" = ["E501"] }
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |
help: Replace rule code with name
   |
28 | ignore = ["F401"]
   - extend-ignore = ["F841"]
29 + extend-ignore = ["unused-variable"]
30 | per-file-ignores = { "foo.py" = ["E501"] }
   |

RUF201 [*] Rule code used instead of name in lint.per-file-ignores
  --> pyproject.toml:30:35
   |
28 | ignore = ["F401"]
29 | extend-ignore = ["F841"]
30 | per-file-ignores = { "foo.py" = ["E501"] }
   |                                   ^^^^
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
32 | unfixable = ["F401"]
   |
help: Replace rule code with name
   |
29 | extend-ignore = ["F841"]
   - per-file-ignores = { "foo.py" = ["E501"] }
30 + per-file-ignores = { "foo.py" = ["line-too-long"] }
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |

RUF201 [*] Rule code used instead of name in lint.extend-per-file-ignores
  --> pyproject.toml:31:42
   |
29 | extend-ignore = ["F841"]
30 | per-file-ignores = { "foo.py" = ["E501"] }
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |                                          ^^^^^
32 | unfixable = ["F401"]
33 | extend-unfixable = ["F841"]
   |
help: Replace rule code with name
   |
30 | per-file-ignores = { "foo.py" = ["E501"] }
   - extend-per-file-ignores = { "bar.py" = ["UP035"] }
31 + extend-per-file-ignores = { "bar.py" = ["deprecated-import"] }
32 | unfixable = ["F401"]
   |

RUF201 [*] Rule code used instead of name in lint.unfixable
  --> pyproject.toml:32:15
   |
30 | per-file-ignores = { "foo.py" = ["E501"] }
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
32 | unfixable = ["F401"]
   |               ^^^^
33 | extend-unfixable = ["F841"]
34 | extend-safe-fixes = ["E501"]
   |
help: Replace rule code with name
   |
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   - unfixable = ["F401"]
32 + unfixable = ["unused-import"]
33 | extend-unfixable = ["F841"]
   |

RUF201 [*] Rule code used instead of name in lint.extend-unfixable
  --> pyproject.toml:33:22
   |
31 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
32 | unfixable = ["F401"]
33 | extend-unfixable = ["F841"]
   |                      ^^^^
34 | extend-safe-fixes = ["E501"]
35 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
32 | unfixable = ["F401"]
   - extend-unfixable = ["F841"]
33 + extend-unfixable = ["unused-variable"]
34 | extend-safe-fixes = ["E501"]
   |

RUF201 [*] Rule code used instead of name in lint.extend-safe-fixes
  --> pyproject.toml:34:23
   |
32 | unfixable = ["F401"]
33 | extend-unfixable = ["F841"]
34 | extend-safe-fixes = ["E501"]
   |                       ^^^^
35 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
33 | extend-unfixable = ["F841"]
   - extend-safe-fixes = ["E501"]
34 + extend-safe-fixes = ["line-too-long"]
35 | extend-unsafe-fixes = ["UP035"]
   |

RUF201 [*] Rule code used instead of name in lint.extend-unsafe-fixes
  --> pyproject.toml:35:25
   |
33 | extend-unfixable = ["F841"]
34 | extend-safe-fixes = ["E501"]
35 | extend-unsafe-fixes = ["UP035"]
   |                         ^^^^^
   |
help: Replace rule code with name
   |
34 | extend-safe-fixes = ["E501"]
   - extend-unsafe-fixes = ["UP035"]
35 + extend-unsafe-fixes = ["deprecated-import"]
   |
