crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF201_ruff.toml.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF201 [*] Rule code used instead of name in `select`
 --> ruff.toml:2:6
  |
1 | select = [
2 |     "F401",
  |      ^^^^
3 |     "unused-import",
4 |     "F",
  |
help: Replace rule code with name
  |
1 | select = [
  -     "F401",
2 |     "unused-import",
3 +     "unused-import",
4 |     "F",
  |

RUF201 [*] Rule code used instead of name in `extend-select`
 --> ruff.toml:6:19
  |
4 |     "F",
5 | ]
6 | extend-select = ['F841']
  |                   ^^^^
7 | fixable = ["""E501"""]
8 | extend-fixable = ['''UP035''']
  |
help: Replace rule code with name
  |
5 | ]
  - extend-select = ['F841']
6 + extend-select = ['unused-variable']
7 | fixable = ["""E501"""]
  |

RUF201 [*] Rule code used instead of name in `fixable`
 --> ruff.toml:7:15
  |
5 | ]
6 | extend-select = ['F841']
7 | fixable = ["""E501"""]
  |               ^^^^
8 | extend-fixable = ['''UP035''']
9 | ignore = ["F401"]
  |
help: Replace rule code with name
  |
6 | extend-select = ['F841']
  - fixable = ["""E501"""]
7 + fixable = ["""line-too-long"""]
8 | extend-fixable = ['''UP035''']
  |

RUF201 [*] Rule code used instead of name in `extend-fixable`
  --> ruff.toml:8:22
   |
 6 | extend-select = ['F841']
 7 | fixable = ["""E501"""]
 8 | extend-fixable = ['''UP035''']
   |                      ^^^^^
 9 | ignore = ["F401"]
10 | extend-ignore = ["F841"]
   |
help: Replace rule code with name
  |
7 | fixable = ["""E501"""]
  - extend-fixable = ['''UP035''']
8 + extend-fixable = ['''deprecated-import''']
9 | ignore = ["F401"]
  |

RUF201 [*] Rule code used instead of name in `ignore`
  --> ruff.toml:9:12
   |
 7 | fixable = ["""E501"""]
 8 | extend-fixable = ['''UP035''']
 9 | ignore = ["F401"]
   |            ^^^^
10 | extend-ignore = ["F841"]
11 | per-file-ignores = { "foo.py" = ["E501"] }
   |
help: Replace rule code with name
   |
8  | extend-fixable = ['''UP035''']
   - ignore = ["F401"]
9  + ignore = ["unused-import"]
10 | extend-ignore = ["F841"]
   |

RUF201 [*] Rule code used instead of name in `extend-ignore`
  --> ruff.toml:10:19
   |
 8 | extend-fixable = ['''UP035''']
 9 | ignore = ["F401"]
10 | extend-ignore = ["F841"]
   |                   ^^^^
11 | per-file-ignores = { "foo.py" = ["E501"] }
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |
help: Replace rule code with name
   |
9  | ignore = ["F401"]
   - extend-ignore = ["F841"]
10 + extend-ignore = ["unused-variable"]
11 | per-file-ignores = { "foo.py" = ["E501"] }
   |

RUF201 [*] Rule code used instead of name in `per-file-ignores`
  --> ruff.toml:11:35
   |
 9 | ignore = ["F401"]
10 | extend-ignore = ["F841"]
11 | per-file-ignores = { "foo.py" = ["E501"] }
   |                                   ^^^^
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
13 | unfixable = ["F401"]
   |
help: Replace rule code with name
   |
10 | extend-ignore = ["F841"]
   - per-file-ignores = { "foo.py" = ["E501"] }
11 + per-file-ignores = { "foo.py" = ["line-too-long"] }
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |

RUF201 [*] Rule code used instead of name in `extend-per-file-ignores`
  --> ruff.toml:12:42
   |
10 | extend-ignore = ["F841"]
11 | per-file-ignores = { "foo.py" = ["E501"] }
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |                                          ^^^^^
13 | unfixable = ["F401"]
14 | extend-unfixable = ["F841"]
   |
help: Replace rule code with name
   |
11 | per-file-ignores = { "foo.py" = ["E501"] }
   - extend-per-file-ignores = { "bar.py" = ["UP035"] }
12 + extend-per-file-ignores = { "bar.py" = ["deprecated-import"] }
13 | unfixable = ["F401"]
   |

RUF201 [*] Rule code used instead of name in `unfixable`
  --> ruff.toml:13:15
   |
11 | per-file-ignores = { "foo.py" = ["E501"] }
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
13 | unfixable = ["F401"]
   |               ^^^^
14 | extend-unfixable = ["F841"]
15 | extend-safe-fixes = ["E501"]
   |
help: Replace rule code with name
   |
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   - unfixable = ["F401"]
13 + unfixable = ["unused-import"]
14 | extend-unfixable = ["F841"]
   |

RUF201 [*] Rule code used instead of name in `extend-unfixable`
  --> ruff.toml:14:22
   |
12 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
13 | unfixable = ["F401"]
14 | extend-unfixable = ["F841"]
   |                      ^^^^
15 | extend-safe-fixes = ["E501"]
16 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
13 | unfixable = ["F401"]
   - extend-unfixable = ["F841"]
14 + extend-unfixable = ["unused-variable"]
15 | extend-safe-fixes = ["E501"]
   |

RUF201 [*] Rule code used instead of name in `extend-safe-fixes`
  --> ruff.toml:15:23
   |
13 | unfixable = ["F401"]
14 | extend-unfixable = ["F841"]
15 | extend-safe-fixes = ["E501"]
   |                       ^^^^
16 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
14 | extend-unfixable = ["F841"]
   - extend-safe-fixes = ["E501"]
15 + extend-safe-fixes = ["line-too-long"]
16 | extend-unsafe-fixes = ["UP035"]
   |

RUF201 [*] Rule code used instead of name in `extend-unsafe-fixes`
  --> ruff.toml:16:25
   |
14 | extend-unfixable = ["F841"]
15 | extend-safe-fixes = ["E501"]
16 | extend-unsafe-fixes = ["UP035"]
   |                         ^^^^^
17 |
18 | [lint]
   |
help: Replace rule code with name
   |
15 | extend-safe-fixes = ["E501"]
   - extend-unsafe-fixes = ["UP035"]
16 + extend-unsafe-fixes = ["deprecated-import"]
17 |
   |

RUF201 [*] Rule code used instead of name in `lint.select`
  --> ruff.toml:20:6
   |
18 | [lint]
19 | select = [
20 |     "F401",
   |      ^^^^
21 |     "unused-import",
22 |     "unknown-rule",
   |
help: Replace rule code with name
   |
19 | select = [
   -     "F401",
20 |     "unused-import",
21 +     "unused-import",
22 |     "unknown-rule",
   |

RUF201 [*] Rule code used instead of name in `lint.extend-select`
  --> ruff.toml:24:19
   |
22 |     "unknown-rule",
23 | ]
24 | extend-select = ['F841']
   |                   ^^^^
25 | fixable = ["""E501"""]
26 | extend-fixable = ['''UP035''']
   |
help: Replace rule code with name
   |
23 | ]
   - extend-select = ['F841']
24 + extend-select = ['unused-variable']
25 | fixable = ["""E501"""]
   |

RUF201 [*] Rule code used instead of name in `lint.fixable`
  --> ruff.toml:25:15
   |
23 | ]
24 | extend-select = ['F841']
25 | fixable = ["""E501"""]
   |               ^^^^
26 | extend-fixable = ['''UP035''']
27 | ignore = ["F401"]
   |
help: Replace rule code with name
   |
24 | extend-select = ['F841']
   - fixable = ["""E501"""]
25 + fixable = ["""line-too-long"""]
26 | extend-fixable = ['''UP035''']
   |

RUF201 [*] Rule code used instead of name in `lint.extend-fixable`
  --> ruff.toml:26:22
   |
24 | extend-select = ['F841']
25 | fixable = ["""E501"""]
26 | extend-fixable = ['''UP035''']
   |                      ^^^^^
27 | ignore = ["F401"]
28 | extend-ignore = ["F841"]
   |
help: Replace rule code with name
   |
25 | fixable = ["""E501"""]
   - extend-fixable = ['''UP035''']
26 + extend-fixable = ['''deprecated-import''']
27 | ignore = ["F401"]
   |

RUF201 [*] Rule code used instead of name in `lint.ignore`
  --> ruff.toml:27:12
   |
25 | fixable = ["""E501"""]
26 | extend-fixable = ['''UP035''']
27 | ignore = ["F401"]
   |            ^^^^
28 | extend-ignore = ["F841"]
29 | per-file-ignores = { "foo.py" = ["E501"] }
   |
help: Replace rule code with name
   |
26 | extend-fixable = ['''UP035''']
   - ignore = ["F401"]
27 + ignore = ["unused-import"]
28 | extend-ignore = ["F841"]
   |

RUF201 [*] Rule code used instead of name in `lint.extend-ignore`
  --> ruff.toml:28:19
   |
26 | extend-fixable = ['''UP035''']
27 | ignore = ["F401"]
28 | extend-ignore = ["F841"]
   |                   ^^^^
29 | per-file-ignores = { "foo.py" = ["E501"] }
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |
help: Replace rule code with name
   |
27 | ignore = ["F401"]
   - extend-ignore = ["F841"]
28 + extend-ignore = ["unused-variable"]
29 | per-file-ignores = { "foo.py" = ["E501"] }
   |

RUF201 [*] Rule code used instead of name in `lint.per-file-ignores`
  --> ruff.toml:29:35
   |
27 | ignore = ["F401"]
28 | extend-ignore = ["F841"]
29 | per-file-ignores = { "foo.py" = ["E501"] }
   |                                   ^^^^
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
31 | unfixable = ["F401"]
   |
help: Replace rule code with name
   |
28 | extend-ignore = ["F841"]
   - per-file-ignores = { "foo.py" = ["E501"] }
29 + per-file-ignores = { "foo.py" = ["line-too-long"] }
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |

RUF201 [*] Rule code used instead of name in `lint.extend-per-file-ignores`
  --> ruff.toml:30:42
   |
28 | extend-ignore = ["F841"]
29 | per-file-ignores = { "foo.py" = ["E501"] }
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   |                                          ^^^^^
31 | unfixable = ["F401"]
32 | extend-unfixable = ["F841"]
   |
help: Replace rule code with name
   |
29 | per-file-ignores = { "foo.py" = ["E501"] }
   - extend-per-file-ignores = { "bar.py" = ["UP035"] }
30 + extend-per-file-ignores = { "bar.py" = ["deprecated-import"] }
31 | unfixable = ["F401"]
   |

RUF201 [*] Rule code used instead of name in `lint.unfixable`
  --> ruff.toml:31:15
   |
29 | per-file-ignores = { "foo.py" = ["E501"] }
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
31 | unfixable = ["F401"]
   |               ^^^^
32 | extend-unfixable = ["F841"]
33 | extend-safe-fixes = ["E501"]
   |
help: Replace rule code with name
   |
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
   - unfixable = ["F401"]
31 + unfixable = ["unused-import"]
32 | extend-unfixable = ["F841"]
   |

RUF201 [*] Rule code used instead of name in `lint.extend-unfixable`
  --> ruff.toml:32:22
   |
30 | extend-per-file-ignores = { "bar.py" = ["UP035"] }
31 | unfixable = ["F401"]
32 | extend-unfixable = ["F841"]
   |                      ^^^^
33 | extend-safe-fixes = ["E501"]
34 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
31 | unfixable = ["F401"]
   - extend-unfixable = ["F841"]
32 + extend-unfixable = ["unused-variable"]
33 | extend-safe-fixes = ["E501"]
   |

RUF201 [*] Rule code used instead of name in `lint.extend-safe-fixes`
  --> ruff.toml:33:23
   |
31 | unfixable = ["F401"]
32 | extend-unfixable = ["F841"]
33 | extend-safe-fixes = ["E501"]
   |                       ^^^^
34 | extend-unsafe-fixes = ["UP035"]
   |
help: Replace rule code with name
   |
32 | extend-unfixable = ["F841"]
   - extend-safe-fixes = ["E501"]
33 + extend-safe-fixes = ["line-too-long"]
34 | extend-unsafe-fixes = ["UP035"]
   |

RUF201 [*] Rule code used instead of name in `lint.extend-unsafe-fixes`
  --> ruff.toml:34:25
   |
32 | extend-unfixable = ["F841"]
33 | extend-safe-fixes = ["E501"]
34 | extend-unsafe-fixes = ["UP035"]
   |                         ^^^^^
   |
help: Replace rule code with name
   |
33 | extend-safe-fixes = ["E501"]
   - extend-unsafe-fixes = ["UP035"]
34 + extend-unsafe-fixes = ["deprecated-import"]
   |
