crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__add_future_import_RUF013_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF013 [*] PEP 484 prohibits implicit `Optional`
 --> RUF013_1.py:4:12
  |
4 | def f(arg: int = None):  # RUF013
  |            ^^^
5 |     pass
  |
help: Convert to `T | None`
  |
4 + from __future__ import annotations
5 ~ def f(arg: int | None = None):  # RUF013
  |
note: This is an unsafe fix and may change runtime behavior
