crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__add_future_import_RUF013_3.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF013 [*] PEP 484 prohibits implicit `Optional`
 --> RUF013_3.py:4:12
  |
4 | def f(arg: typing.List[str] = None):  # RUF013
  |            ^^^^^^^^^^^^^^^^
5 |     pass
  |
help: Convert to `T | None`
  |
1 + from __future__ import annotations
2 | import typing
3 |
4 |
5 ~ def f(arg: typing.List[str] | None = None):  # RUF013
  |
note: This is an unsafe fix and may change runtime behavior

RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_3.py:22:12
   |
22 | def f(arg: typing.Union[int, str] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^
23 |     pass
   |
help: Convert to `T | None`
   |
 1 + from __future__ import annotations
 2 | import typing
 3 |
 …
22 |
23 ~ def f(arg: typing.Union[int, str] | None = None):  # RUF013
   |
note: This is an unsafe fix and may change runtime behavior

RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_3.py:29:12
   |
29 | def f(arg: typing.Literal[1, "foo", True] = None):  # RUF013
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
30 |     pass
   |
help: Convert to `T | None`
   |
 1 + from __future__ import annotations
 2 | import typing
 3 |
 …
29 |
30 ~ def f(arg: typing.Literal[1, "foo", True] | None = None):  # RUF013
   |
note: This is an unsafe fix and may change runtime behavior
