crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__add_future_import_RUF013_4.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF013 [*] PEP 484 prohibits implicit `Optional`
  --> RUF013_4.py:15:61
   |
15 | def multiple_2(arg1: Optional, arg2: Optional = None, arg3: int = None): ...
   |                                                             ^^^
help: Convert to `T | None`
   |
 3 + from __future__ import annotations
 4 | from typing import Optional
 5 |
 …
15 |
16 ~ def multiple_2(arg1: Optional, arg2: Optional = None, arg3: int | None = None): ...
   |
note: This is an unsafe fix and may change runtime behavior
